CloudFormation/script.json
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Metadata":{
      
   },
   "Resources":{
      
    
    "LaunchTemplate":{
         "Type":"AWS::EC2::LaunchTemplate",
         "Properties":{
            "LaunchTemplateData":{
               "ImageId":"ami-07ee42ba0209b6d77",
               "InstanceType":"t2.large"
            },
            "LaunchTemplateName":"Testingname"
         }
      },
      "VPC":{
         "Type":"AWS::EC2::VPC",
         "Properties":{
            "CidrBlock":"172.31.0.0/16",
            "EnableDnsSupport":"true",
            "EnableDnsHostnames":"true",
            "InstanceTenancy":"default"
         }
      },
      "InternetGateway":{
         "Type":"AWS::EC2::InternetGateway"
      },
      "VPCGatewayAttachment":{
         "Type":"AWS::EC2::VPCGatewayAttachment",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "InternetGatewayId":{
               "Ref":"InternetGateway"
            }
         }
      },
      "SubnetA":{
         "Type":"AWS::EC2::Subnet",
         "Properties":{
            "VpcId":{
               "Ref":"VPC"
            },
            "CidrBlock":"172.31.0.0/20",
            "MapPublicIpOnLaunch":true
         }
      },
   
   "RouteTable":{
      "Type":"AWS::EC2::RouteTable",
      "Properties":{
         "VpcId":{
            "Ref":"VPC"
         }
      }
   },
   "InternetRoute":{
      "Type":"AWS::EC2::Route",
      "DependsOn":"VPCGatewayAttachment",
      "Properties":{
         "DestinationCidrBlock":"0.0.0.0/0",
         "GatewayId":{
            "Ref":"InternetGateway"
         },
         "RouteTableId":{
            "Ref":"RouteTable"
         }
      }
   },
   "SubnetARouteTableAssociation":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "Properties":{
         "RouteTableId":{
            "Ref":"RouteTable"
         },
         "SubnetId":{
            "Ref":"SubnetA"
         }
      }
   },
   "SecurityGroup":{
      "Type":"AWS::EC2::SecurityGroup",
      "Properties":{
         "GroupName":"Armada Group",
         "GroupDescription":"jmeter and SSH traffic in, all traffic out.",
         "VpcId":{
            "Ref":"VPC"
         },
         "SecurityGroupIngress":[
            {
               "IpProtocol":"tcp",
               "FromPort":"22",
               "ToPort":"22",
               "CidrIp":"151.226.39.115/32"
            },
            {
               "IpProtocol":"tcp",
               "FromPort":"5000",
               "ToPort":"5000",
               "CidrIp":"0.0.0.0/0"
            },
            {
               "IpProtocol":"tcp",
               "FromPort":"6000",
               "ToPort":"6000",
               "CidrIp":"0.0.0.0/0"
            },
            {
               "IpProtocol":"tcp",
               "FromPort":"1099",
               "ToPort":"1099",
               "CidrIp":"0.0.0.0/0"
            }
         ],
         "SecurityGroupEgress":[
            {
               "IpProtocol":-1,
               "CidrIp":"0.0.0.0/0"
            }
         ]
      }
   },
   "EC2Instance":{
      "Type":"AWS::EC2::Instance",
      "DependsOn":["SubnetA","VPC","SecurityGroup"],
      "Properties":{
         "ImageId":"ami-07ee42ba0209b6d77",
         "SubnetId":{"Ref":"SubnetA"},
         "SecurityGroupIds":[{"Ref":"SecurityGroup"}],
         "KeyName":"armada-sandbox"
         
      }
   },
   "SpotFleet":{
      "Type":"AWS::EC2::SpotFleet",
      "DependsOn":"LaunchTemplate", 
      "Properties":{
         "SpotFleetRequestConfigData":{
            "TargetCapacity":1,
            "IamFleetRole":"arn:aws:iam::424956271160:role/AmazonEC2SpotFleetRole",
            "LaunchTemplateConfigs":[
               {
                  "LaunchTemplateSpecification":{
                     "LaunchTemplateName":"Testingname",
                     "Version" : { "Fn::GetAtt" : [ "LaunchTemplate", "LatestVersionNumber" ] }
                       }                     
                  }]
               }
      }
         }
      }
   }
